basic markup setup

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,21 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <h1>hello world</h1>
+  <div id="game">
+    <div class="message-box">
+      <div class="player-choice card small"></div>
+      <div class="log"></div>
+      <div class="computer-coice card small"></div>
+    </div>
+    <div class="card-container">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
+    <div class="score-board">
+      <div class="player-score"></div>
+      <div class="computer-score"></div>
+    </div>
+  </div>
 </body>
 </html>
