--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
-  <div id="game">
-    <div class="message-box">
-      <div class="player-choice card small"></div>
-      <div class="log"></div>
-      <div class="computer-coice card small"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <div id="game">
+      <div class="message-box">
+        <div class="choice">
+          <h4>Your Choice:</h4>
+          <div class="player-choice card small"></div>
+        </div>
+        <div class="log"></div>
+        <div class="choice">
+          <h4>AI's Choice:</h4>
+          <div class="computer-coice card small"></div>
+        </div>
+      </div>
+      <div class="card-container">
+        <div class="card rock" data-key="rock">rock</div>
+        <div class="card paper" data-key="paper">paper</div>
+        <div class="card scissors" data-key="scissors">scissors</div>
+      </div>
+      <div class="score-board">
+        <div class="player-score"></div>
+        <div class="computer-score"></div>
+      </div>
     </div>
-    <div class="card-container">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-    </div>
-    <div class="score-board">
-      <div class="player-score"></div>
-      <div class="computer-score"></div>
-    </div>
-  </div>
-</body>
+    <script src="/bundle.js"></script>
+  </body>
 </html>
