--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,18 +12,18 @@
       <div class="message-box">
         <div class="choice">
           <h4>Your Choice:</h4>
-          <div class="player-choice card small"></div>
+          <div><img class="player-choice card small"></img></div>
         </div>
         <div class="log"></div>
         <div class="choice">
           <h4>AI's Choice:</h4>
-          <div class="computer-coice card small"></div>
+          <div><img class="computer-choice card small"></img></div>
         </div>
       </div>
       <div class="card-container">
-        <div class="card rock" data-key="rock">rock</div>
-        <div class="card paper" data-key="paper">paper</div>
-        <div class="card scissors" data-key="scissors">scissors</div>
+        <div class="card rock" data-key="rock"><img src="/img/rock.png" alt="rock"></div>
+        <div class="card paper" data-key="paper"><img src="/img/paper.png" alt="paper"></div>
+        <div class="card scissors" data-key="scissors"><img src="/img/scissors.png" alt="scissors"></div>
       </div>
       <div class="score-board">
         <div class="player-score"></div>
