score class init

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,7 +14,11 @@
           <h4>Your Choice:</h4>
           <div><img class="player-choice card small"></img></div>
         </div>
-        <div class="log"></div>
+        <div class="log">
+          <p class="player-score"></p>
+          <p class="log-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, in.</p>
+          <p class="computer-score"></p>
+        </div>
         <div class="choice">
           <h4>AI's Choice:</h4>
           <div><img class="computer-choice card small"></img></div>
