--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Rock Paper Scissors</title>
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
@@ -15,9 +16,17 @@
           <div><img class="player-choice card small"></img></div>
         </div>
         <div class="log">
-          <p class="player-score"></p>
-          <p class="log-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, in.</p>
-          <p class="computer-score"></p>
+          <div class="score">
+              <h4>Your Score:</h4>
+              <p class="player-score"></p>
+          </div>
+          <div class="log-text-container">
+              <p class="log-text">Hope you lose :P</p>
+          </div>
+          <div class="score">
+              <h4>AI Score:</h4>
+              <p class="computer-score"></p>
+          </div>
         </div>
         <div class="choice">
           <h4>AI's Choice:</h4>
